0.2.0
 - ref: support latest dcnum version
0.1.9
  - initial pre-release
0.0.1
 - skeleton release