@@ -1,6 +1,10 @@
 import time
 
+import h5py
+import numpy as np
 import pytest
+
+from helper_methods import retrieve_data
 
 pytest.importorskip("PyQt6")
 
@@ -34,3 +38,21 @@ def test_gui_basic(mw):
     assert mw.spinBox_thresh.value() == -6
     assert mw.checkBox_feat_bright.isChecked()
     assert len(mw.manager) == 0
+
+
+def test_gui_set_pixel_size(mw):
+    path = retrieve_data(
+        "fmt-hdf5_cytoshot_full-features_legacy_allev_2023.zip")
+    mw.append_paths([path])
+    mw.checkBox_pixel_size.setChecked(True)
+    mw.doubleSpinBox_pixel_size.setValue(0.666)
+    mw.on_run()
+    while mw.manager.is_busy():
+        time.sleep(.1)
+    out_path = path.with_name(path.stem + "_dcn.rtdc")
+    assert out_path.exists()
+
+    with h5py.File(out_path) as h5:
+        assert np.allclose(h5.attrs["imaging:pixel size"],
+                           0.666,
+                           atol=0, rtol=1e-5)
